<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.twoskoops707.sixdegrees.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_results"
            app:destination="@id/nav_results" />
        <action
            android:id="@+id/action_search_to_wizard"
            app:destination="@id/nav_wizard" />
    </fragment>

    <fragment
        android:id="@+id/nav_wizard"
        android:name="com.twoskoops707.sixdegrees.ui.wizard.WizardFragment"
        android:label="@string/menu_wizard"
        tools:layout="@layout/fragment_wizard">
        <action
            android:id="@+id/action_wizard_to_search"
            app:destination="@id/nav_search"
            app:popUpTo="@id/nav_search"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.twoskoops707.sixdegrees.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_results"
            app:destination="@id/nav_results" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.twoskoops707.sixdegrees.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_api_settings"
            app:destination="@id/nav_api_settings" />
        <action
            android:id="@+id/action_settings_to_profile"
            app:destination="@id/nav_user_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_results"
        android:name="com.twoskoops707.sixdegrees.ui.results.ResultsFragment"
        android:label="@string/results_title"
        tools:layout="@layout/fragment_results">
        <argument
            android:name="searchQuery"
            app:argType="string" />
        <argument
            android:name="searchType"
            app:argType="string"
            android:defaultValue="person" />
    </fragment>

    <fragment
        android:id="@+id/nav_api_settings"
        android:name="com.twoskoops707.sixdegrees.ui.settings.ApiSettingsFragment"
        android:label="@string/api_settings_title"
        tools:layout="@layout/fragment_api_settings">
        <action
            android:id="@+id/action_api_settings_to_profile"
            app:destination="@id/nav_user_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.twoskoops707.sixdegrees.ui.profile.UserProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_user_profile" />

</navigation>
